src/main/java/com/sample/sampleservice/shared/error/domain/ErrorStatus.java
package com.sample.sampleservice.shared.error.domain;

public enum ErrorStatus {
    INTERNAL_SERVER_ERROR,
    BAD_REQUEST,
}
